# Submitty-ARC-Guide

./: README.rst  setup.cfg
docs/: conf.py  index.rst
docs/instructor/: index.rst
docs/maintainer/: index.rst
submitty_arc/admin/: submitty2local.py
submitty_arc/instructor/: closing_dates.yaml  combine_grades.py  convert_rubric.py  generate_grades.py  grades_extractor.py  moodle2submitty.py
submitty_arc/instructor/tests/: test_combine_grades.py
submitty_arc/instructor/tests/data/: config_marks.yaml  sample_automated_results.json  sample_manual_summary.json
submitty_arc/utils/: check_moodle_submissions.py  clean_moodle_submissions.py  create_dirs_feedback.py  md2tex.py
submitty_arc/utils/latex_template/: assignment_details.tex  student_group_template.tex  student_template.tex  ucl.lco  ucl_mark.sty
submitty_arc/utils/tests/: test_md2tex.py
