[metadata]
name = submitty_arc
version = 0.1.0
author = ARC

[options]
packages = find:
install_requires =
    pyyaml
    jinja2
    markdown==3.3.4
    markdown2latex @ git+https://github.com/dpshelio/markdown2latex@dps-grade
    pandas

[options.packages.find]
exclude =
    *test

[options.package_data]
submitty_arc.utils = latex_template/*

[options.entry_points]
console_scripts =
    grades-extractor = submitty_arc.instructor.grades_extractor:run_it
    grades-combine = submitty_arc.instructor.combine_grades:run_it
    grades-generate = submitty_arc.instructor.generate_grades:run_it
