[metadata]
name = submitty_arc
version = 0.1.0
author = ARC

[options]
packages = find:
install_requires =
    pyyaml
    jinja2
    markdown
    markdown2latex @ git+https://github.com/rufuspollock/markdown2latex
    pandas
    click
    fabric

[options.packages.find]
exclude =
    *tests

[options.package_data]
submitty_arc.utils = latex_template/*

[options.entry_points]
console_scripts =
    grades-extractor = submitty_arc.instructor.grades_extractor:run_it
    grades-combine = submitty_arc.instructor.combine_grades:run_it
    grades-generate = submitty_arc.instructor.generate_grades:run_it
    grades-course = submitty_arc.admin.grades_course:command
    grades-portico = submitty_arc.admin.grades_portico:command
    submitty-run-all = submitty_arc.admin.submitty2local:command
    moodle2submitty = submitty_arc.instructor.moodle2submitty:command
    rubric-convert = submitty_arc.instructor.convert_rubric:run_it